syntax = "proto3";

package common;

option go_package = "github.com/meokg456/ecommerce/proto/common";

message Page {
    int32 page = 1;
    string lastKeyOffset = 2;
    int32 limit = 3;
}